syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/Streamfair/streamfair_idp/pb/user_role";

message UserRole {
    int64 user_id = 1;
    int64 role_id = 2;
    google.protobuf.Timestamp created_at = 3;
}